--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Assesment project for Lob",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Patrick Thulen",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "concurrently": "^6.2.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7"
